fixed work alignment

--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -7,7 +7,7 @@
 .app__work-filter {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
@@ -49,10 +49,7 @@
 
   .app__work-item {
     width: 270px;
-    height: 65vh;
-    
     flex-direction: column;
-    justify-content: flex-start;
 
     margin: 2rem;
     padding: 1rem;
@@ -73,10 +70,6 @@
       border-radius: 0.75rem;
     }
 
-    @media screen and (max-width:900px) {
-      justify-content: unset ;
-      height: auto ;      
-    }
     @media screen and (max-width: 300px) {
       width: 100%;
       margin: 1rem;
